# voicevox-core-rs

./: Cargo.toml  README.md  build.rs
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/src/voicevox_core_rs/: api.rs.html  lib.rs.html  voicevox_core.rs.html
doc/src/vvc/: api.rs.html  lib.rs.html  voicevox_core.rs.html
doc/voicevox_core_rs/: all.html  index.html
doc/voicevox_core_rs/api/: constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  constant.SIZE_MAX.html  constant.UINT16_MAX.html  constant.UINT32_MAX.html  constant.UINT8_MAX.html  constant.UINTPTR_MAX.html  constant.UINT_FAST16_MAX.html  constant.UINT_FAST32_MAX.html  constant.UINT_FAST8_MAX.html  constant.UINT_LEAST16_MAX.html  constant.UINT_LEAST32_MAX.html  constant.UINT_LEAST8_MAX.html  (+198 more)
doc/vvc/: all.html  index.html  sidebar-items.js
examples/: api.rs  simple-tts.rs
src/: api.rs  lib.rs  main.rs
tests/: api_voicevox_core.rs
(+245 files in other folders)
