[package]
name = "voicevox-core-rs"
version = "0.1.0"
authors = ["tapoh <iwase22334@gmail.com>"]

license = "MIT"
description = "The interactive tool for AWS CLI written in Rust"
repository = "https://github.com/iwase22334/voicevox-core-rs"
readme = "README.md"
keywords = ["voicevox", "core"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
